--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
       }
     </script>
     <!-- your scripts -->
-    <script src="env/config.js"></script>
+    <!-- <script src="env/config.js"></script> -->
   </head>
   <body>
     <div id="main">
